; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mfd/extr_sm501.c_sm501_create_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mfd/extr_sm501.c_sm501_create_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sm501_devdata = type { i32 }
%struct.resource = type { i32, i32, i32*, i32 }

@IORESOURCE_IRQ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sm501_devdata*, %struct.resource*)* @sm501_create_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sm501_create_irq(%struct.sm501_devdata* %0, %struct.resource* %1) #0 {
  %3 = alloca %struct.sm501_devdata*, align 8
  %4 = alloca %struct.resource*, align 8
  store %struct.sm501_devdata* %0, %struct.sm501_devdata** %3, align 8
  store %struct.resource* %1, %struct.resource** %4, align 8
  %5 = load i32, i32* @IORESOURCE_IRQ, align 4
  %6 = load %struct.resource*, %struct.resource** %4, align 8
  %7 = getelementptr inbounds %struct.resource, %struct.resource* %6, i32 0, i32 3
  store i32 %5, i32* %7, align 8
  %8 = load %struct.resource*, %struct.resource** %4, align 8
  %9 = getelementptr inbounds %struct.resource, %struct.resource* %8, i32 0, i32 2
  store i32* null, i32** %9, align 8
  %10 = load %struct.sm501_devdata*, %struct.sm501_devdata** %3, align 8
  %11 = getelementptr inbounds %struct.sm501_devdata, %struct.sm501_devdata* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.resource*, %struct.resource** %4, align 8
  %14 = getelementptr inbounds %struct.resource, %struct.resource* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 8
  %15 = load %struct.resource*, %struct.resource** %4, align 8
  %16 = getelementptr inbounds %struct.resource, %struct.resource* %15, i32 0, i32 1
  store i32 %12, i32* %16, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
